// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timer when the CountDownTimer is finished renders the CountUpTimer 1`] = `
<div
  className="countup"
>
  <div>
    Go!
  </div>
  Timer: 
  0
</div>
`;

exports[`Timer when the button has been pressed renders the CountDownTimer 1`] = `
<div
  className="countdown"
>
  <div>
    Get ready to type!
  </div>
  Timer: 
  5
</div>
`;

exports[`Timer when the game has not been started renders the CountDownButton 1`] = `
<div
  className="start"
>
  <button
    onClick={[Function]}
  >
    Start Game
  </button>
</div>
`;
